# shared-todo

./: .gitignore  README.md
client-wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TodoClientWpf.csproj  TodoClientWpf.sln
client-wpf/Converters/: BoolToHiddenVisibilityConverter.cs  TextNotEmptyConverter.cs  TextNotEmptyVisibilityConverter.cs
client-wpf/Helpers/: ApplicationThemeHelper.cs  UiMessageBoxHelper.cs
client-wpf/Models/: Task.cs
client-wpf/Services/: TaskCrudService.cs  TaskWsService.cs
client-wpf/ViewModels/: TodoViewModel.cs
client-wpf/Views/: MainWindow.xaml  MainWindow.xaml.cs
server-drogon/: CMakeLists.txt  Dockerfile  config.json
server-drogon/src/: TaskStore.cpp  TaskStore.h  TaskStorePlugin.cpp  TaskStorePlugin.h  TodoController.cpp  TodoController.h  TodoWebSocket.cpp  TodoWebSocket.h  main.cc  main.cpp
server-drogon/src/controllers/: TodoCrudController.cpp  TodoCrudController.h  TodoWebSocketController.cpp  TodoWebSocketController.h
server-drogon/src/plugins/: TaskStorePlugin.cpp  TaskStorePlugin.h
server-drogon/src/services/: TaskStoreService.cpp  TaskStoreService.h
